testsuite/poke.pkl/computed-diag-9.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    int k;
    computed int i;

    method get_i = int: { return k * 2; }
    method set_i = (int v) int: { return k; } /* { dg-error "" } */
  };
